remove java 11 method-calls